<resources>
    <string name="app_name">tischPacken</string>

    <string name="inspector">Inspector </string>
    <string name="out_of"> out of </string>

    <string name="name">Name: </string>
    <string name="inspector_name">Inspector Name</string>
    <string name="inspector_number">Inspector Number</string>
    <string name="inspection_date">Inspection Date</string>
    <string name="planned_cartons">Planned Cartons</string>
    
    <string name="plan">PLAN</string>
    <string name="scan">SCAN</string>

    <!-- List View title -->
    <string name="part_number">Part Number</string>
    <string name="type">Type</string>
    <string name="no_of_carton">No. of carton</string>
    <string name="carton_number">Carton Number</string>

    <string name="next">Next</string>
    <string name="clear">Clear</string>

    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>

    <string name="specific_carton_nrs">Specific Carton Numbers</string>

    <!-- Settings Dialog -->
    <string name="smb_server">SMB Server</string>
    <string name="smb_address">Server Address</string>
    <string name="shared_folder">Shared Folder</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="test_connection">Test Connection</string>
    <string name="view_records">View records</string>
    <string name="upload_records">Upload records</string>
    <string name="download_files">Download files</string>

    <!-- Skip Dialog -->
    <string name="skip_carton">Skip Carton</string>
    <string name="skip_number_question">How many cartons to skip?</string>
    <string name="ok">Ok</string>

</resources>