<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/title"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtNameField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:hint=""
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="12sp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:enabled="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="2dp">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/inspector_name"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txtInspectorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="2dp">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/inspector_number"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txtInspectorNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="2dp">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/inspector_date"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txtInspectorDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginVertical="2dp">
            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/planned_cartons"
                android:textColor="#000000"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/txtPlannedCartons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text=""
                android:textColor="#000000"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plan"
            android:textColor="#000000"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="#cccccc"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="100dp"
                android:textSize="13sp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/part_number"/>

            <TextView
                android:layout_width="80dp"
                android:textSize="13sp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:layout_width="100dp"
                android:textSize="13sp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/no_of_carton" />

            <TextView
                android:layout_width="120dp"
                android:textSize="13sp"
                android:paddingVertical="10dp"
                android:textColor="#000000"
                android:layout_height="wrap_content"
                android:text="@string/carton_number" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/planListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtScanField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:hint="">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_marginVertical="16dp">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/settings"
            android:contentDescription="@string/settings" />

        <ImageButton
            android:id="@+id/btnUpdate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/update"
            android:contentDescription="@string/update"
            android:layout_marginHorizontal="30dp"/>

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/save"
            android:contentDescription="@string/save" />
    </LinearLayout>

</LinearLayout>
