<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:orientation="horizontal"
    android:background="#cccccc"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/txtPartNumber"
        android:layout_width="95dp"
        android:layout_marginStart="10dp"
        android:textSize="12sp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/part_number"/>

    <TextView
        android:id="@+id/txtType"
        android:layout_width="65dp"
        android:textSize="12sp"
        android:autoSizeMinTextSize="11sp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/type" />

    <TextView
        android:id="@+id/txtNoOfCarton"
        android:layout_width="70dp"
        android:textSize="12sp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:text="@string/no_of_carton"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtSkipped"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#00dd00"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/txtScanCounter"
        android:layout_width="40dp"
        android:textSize="13sp"
        android:paddingVertical="10dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_border"
        android:textAlignment="center"
        android:text="0" />

    <ImageButton
        android:id="@+id/btnSkip"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/skip_image_selector"
        android:textAllCaps="false"/>

</LinearLayout>