<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@android:color/darker_gray"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="Planned Date"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="@string/inspector_name"
                    android:gravity="center" />

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="@string/carton_number"
                    android:gravity="center" />

                <TextView
                    android:layout_width="150dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="@string/part_number"
                    android:gravity="center" />

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="D_nr"
                    android:gravity="center" />

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="Qtty"
                    android:gravity="center" />

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="Comments"
                    android:gravity="center" />

                <TextView
                    android:layout_width="100dp"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="Skipped Counter"
                    android:gravity="center" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"/>
        </LinearLayout>

    </HorizontalScrollView>
</ScrollView>